--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 13 2023 02:31:52 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 14 2023 01:08:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656504e52e383d09efa77703" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -103,8 +103,8 @@
   </div>
   <section class="testimonial-column-dark">
     <div class="container-7">
-      <h2 class="centered-heading">An all in one platform,<br>creative tool, and social experience.</h2>
-      <div class="features-wrapper-two">
+      <h2 data-w-id="937139f4-8804-09ea-19fb-267b49aa28ba" style="opacity:0" class="centered-heading">An all in one platform,<br>creative tool, and social experience.</h2>
+      <div data-w-id="086f8edd-4f2d-c2bf-b2ec-77e2e34ef5f4" style="opacity:0" class="features-wrapper-two">
         <div class="features-left">
           <h3 class="heading-11">What is it?</h3>
           <p class="features-paragraph">A novel digital universe with infinite possibilities. Whether you resonate with people around the world in a casual conversation, playing games and socializing. Or you riff off each other when creating anything from art to programming complex games, you&#x27;ll find your place here.</p>
@@ -131,8 +131,8 @@
   </section>
   <section class="pricing-overview">
     <div class="container-9">
-      <h2 class="centered-heading-2">Love the platform or just want more storage?</h2>
-      <p class="pricing-description">While Resonite remains by default a free to use platform, you can expand your storage limit (more inventory space!), receive custom badges, a special role on discord, and more by becoming a supporter! See more pricing options by clicking &quot;learn more&quot; below.<br></p>
+      <h2 data-w-id="94b3c992-6e84-9ddb-59fb-4a4d840429cc" style="opacity:0" class="centered-heading-2">Love the platform or just want more storage?</h2>
+      <p data-w-id="94b3c992-6e84-9ddb-59fb-4a4d840429ce" style="opacity:0" class="pricing-description">While Resonite remains by default a free to use platform, you can expand your storage limit (more inventory space!), receive custom badges, a special role on discord, and more by becoming a supporter! See more pricing options by clicking &quot;learn more&quot; below.<br></p>
       <div class="pricing-grid">
         <div id="w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429d2-efa77703" class="pricing-card-three"><img src="images/Color_128_Supporter_Yellow.png" loading="lazy" alt="" class="pricing-image">
           <h3 class="heading-12">$5/Month: Explorer</h3>
