--- a/features.html
+++ b/features.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Dec 14 2023 01:27:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 14 2023 02:30:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6565266954e064f8c40d89ac" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -110,7 +110,7 @@
           <h2 class="heading-3">Collaborative Creation Tools</h2>
           <p class="margin-bottom-24px">Resonite provides users an array of development tools that can be used alongside others in your session! Create custom avatars, interactive props, worlds, experiences, and much more! (While possible, we typically advise against deleting all of existence.)</p>
         </div>
-        <div class="hero-split"><img src="images/Features_CollaborativeCreationTools_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_CollaborativeCreationTools_01-p-500.jpg 500w, images/Features_CollaborativeCreationTools_01-p-800.jpg 800w, images/Features_CollaborativeCreationTools_01-p-1080.jpg 1080w, images/Features_CollaborativeCreationTools_01-p-1600.jpg 1600w, images/Features_CollaborativeCreationTools_01-p-2000.jpg 2000w, images/Features_CollaborativeCreationTools_01.jpg 2560w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/Features_CollaborativeCreationTools_01.jpg" loading="lazy" sizes="100vw" srcset="images/Features_CollaborativeCreationTools_01-p-500.jpg 500w, images/Features_CollaborativeCreationTools_01-p-800.jpg 800w, images/Features_CollaborativeCreationTools_01-p-1080.jpg 1080w, images/Features_CollaborativeCreationTools_01-p-1600.jpg 1600w, images/Features_CollaborativeCreationTools_01-p-2000.jpg 2000w, images/Features_CollaborativeCreationTools_01.jpg 2560w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
@@ -172,7 +172,7 @@
           <h2 class="heading-5">Interactive Custom Avatars</h2>
           <p class="margin-bottom-24px">Resonite allows you to share, build, and collect interactive custom avatars! (Legs included.)</p>
         </div>
-        <div class="hero-split"><img src="images/2023-11-10-00.56.08.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/2023-11-10-00.56.08-p-500.jpg 500w, images/2023-11-10-00.56.08-p-800.jpg 800w, images/2023-11-10-00.56.08-p-1080.jpg 1080w, images/2023-11-10-00.56.08-p-1600.jpg 1600w, images/2023-11-10-00.56.08-p-2000.jpg 2000w, images/2023-11-10-00.56.08-p-2600.jpg 2600w, images/2023-11-10-00.56.08-p-3200.jpg 3200w, images/2023-11-10-00.56.08.jpg 3840w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/2023-11-10-00.56.08.jpg" loading="lazy" sizes="100vw" srcset="images/2023-11-10-00.56.08-p-500.jpg 500w, images/2023-11-10-00.56.08-p-800.jpg 800w, images/2023-11-10-00.56.08-p-1080.jpg 1080w, images/2023-11-10-00.56.08-p-1600.jpg 1600w, images/2023-11-10-00.56.08-p-2000.jpg 2000w, images/2023-11-10-00.56.08-p-2600.jpg 2600w, images/2023-11-10-00.56.08-p-3200.jpg 3200w, images/2023-11-10-00.56.08.jpg 3840w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
