--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Dec 14 2023 01:27:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 14 2023 02:30:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656504e52e383d09efa77703" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
-                    <a href="https://resonite.com/policies/" class="nav-dropdown-link w-dropdown-link">Policies</a>
+                    <a href="https://resonite.com/policies.html" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
                   </nav>
                 </div>
               </li>
