fix(images): fix Prime's oopsie

--- a/policies/Changelog.html
+++ b/policies/Changelog.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <img src="assets/images/resonite.png"/>
+            <img src="/policies/assets/images/resonite.png"/>
             <nav>
                 <a href="https://resonite.com">Home</a>
             </nav>
