--- a/policies/Security.html
+++ b/policies/Security.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <img src="assets/images/resonite.png"/>
+            <img src="/policies/assets/images/resonite.png"/>
         </header>
         <nav>
             <a href="https://resonite.com">Home</a> | <a href="https://resonite.com/policies/index.html">Policies Page</a>
