--- a/case-studies.html
+++ b/case-studies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Dec 14 2023 02:49:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 19 2023 19:01:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656539d3fe23ca7ddda57eb1" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 158.99305725097656px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -42,7 +42,7 @@
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="case-studies.html" aria-current="page" class="nav-dropdown-link w-dropdown-link w--current">Case Studies</a>
-                    <a href="https://resonite.com/policies/" class="nav-dropdown-link w-dropdown-link">Policies</a>
+                    <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
                   </nav>
                 </div>
               </li>
@@ -56,7 +56,7 @@
                     <div class="text-block-2">Socials</div>
                   </div>
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
-                    <a href="https://discord.gg/Jm4nsEGq" class="nav-dropdown-link w-dropdown-link">Discord</a>
+                    <a href="http://discord.gg/resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Discord</a>
                     <a href="https://www.twitch.tv/resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitch</a>
                     <a href="https://twitter.com/ResoniteApp?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitter</a>
                     <a href="https://www.youtube.com/@resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">YouTube</a>
@@ -101,14 +101,14 @@
           <h2 class="heading-6">Enterprise</h2>
           <p class="margin-bottom-24px">Using Resonite’s vast array of development tools, you can host meetings, whiteboard sessions, and create custom training simulations for your company.</p>
         </div>
-        <div class="hero-split"><img src="images/CaseStudies_Enterprise_01.jpg" loading="lazy" sizes="100vw" srcset="images/CaseStudies_Enterprise_01-p-500.jpg 500w, images/CaseStudies_Enterprise_01-p-800.jpg 800w, images/CaseStudies_Enterprise_01-p-1080.jpg 1080w, images/CaseStudies_Enterprise_01-p-1600.jpg 1600w, images/CaseStudies_Enterprise_01.jpg 1920w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/CaseStudies_Enterprise_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/CaseStudies_Enterprise_01-p-500.jpg 500w, images/CaseStudies_Enterprise_01-p-800.jpg 800w, images/CaseStudies_Enterprise_01-p-1080.jpg 1080w, images/CaseStudies_Enterprise_01-p-1600.jpg 1600w, images/CaseStudies_Enterprise_01.jpg 1920w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
   <section class="hero-heading-right-2-copy">
     <div class="container-2">
       <div class="hero-wrapper-2">
-        <div class="hero-split"><img src="images/CaseStudies_Medical_01.jpg" loading="lazy" sizes="100vw" srcset="images/CaseStudies_Medical_01-p-500.jpg 500w, images/CaseStudies_Medical_01-p-800.jpg 800w, images/CaseStudies_Medical_01-p-1080.jpg 1080w, images/CaseStudies_Medical_01-p-1600.jpg 1600w, images/CaseStudies_Medical_01.jpg 1920w" alt="" class="shadow-two-3"></div>
+        <div class="hero-split"><img src="images/CaseStudies_Medical_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/CaseStudies_Medical_01-p-500.jpg 500w, images/CaseStudies_Medical_01-p-800.jpg 800w, images/CaseStudies_Medical_01-p-1080.jpg 1080w, images/CaseStudies_Medical_01-p-1600.jpg 1600w, images/CaseStudies_Medical_01.jpg 1920w" alt="" class="shadow-two-3"></div>
         <div class="hero-split">
           <h2 class="heading-7">Medical</h2>
           <p class="margin-bottom-24px-copy-copy">Resonite can be used to view patient data, MRI scans, 3D models and more, all there alongside other professionals and patients.</p>
@@ -141,7 +141,7 @@
   <section class="footer-dark-3">
     <div class="container-9">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 84vw, 158.99305725097656px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 84vw, 159px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
           <div id="w-node-d127d85e-5c17-a023-ca5d-3b118a08a676-dda57eb1" class="footer-block-2">
             <div class="title-small-2">Company</div>
