--- a/featured.html
+++ b/featured.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Dec 14 2023 02:49:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 19 2023 19:01:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="657a16505a73f376fa530bc7" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -157,13 +157,24 @@
             </div>
           </div>
         </div>
+        <div id="w-node-b1529b9c-f496-3f89-b645-470609e1203a-fa530bc7" class="container-10">
+          <div class="hero-wrapper-two">
+            <div class="w-layout-vflex flex-block-23">
+              <h1 class="heading-15">Modding/ External Tooling</h1>
+              <p class="margin-bottom-24px-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt sagittis eros. Quisque quis euismod lorem. Etiam sodales ac felis id interdum.</p>
+            </div>
+            <div class="w-layout-vflex"><img src="images/Purple_Engineering.png" loading="lazy" alt="" class="hero-image shadow-two">
+              <a href="#" class="button-primary w-button">View Creators</a>
+            </div>
+          </div>
+        </div>
         <div id="w-node-d007db75-50f1-8059-e8ae-fadd85441f45-fa530bc7" class="container-10">
           <div class="hero-wrapper-two">
             <div class="w-layout-vflex flex-block-23">
               <h1 class="heading-15">Gadget Makers</h1>
               <p class="margin-bottom-24px-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt sagittis eros. Quisque quis euismod lorem. Etiam sodales ac felis id interdum.</p>
             </div>
-            <div class="w-layout-vflex"><img src="images/Purple_Engineering.png" loading="lazy" alt="" class="hero-image shadow-two">
+            <div class="w-layout-vflex"><img src="images/Purple_Tools.png" loading="lazy" alt="" class="hero-image shadow-two">
               <a href="#" class="button-primary w-button">View Creators</a>
             </div>
           </div>
