--- a/features.html
+++ b/features.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Dec 14 2023 02:49:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 19 2023 19:01:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6565266954e064f8c40d89ac" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 158.99305725097656px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -56,7 +56,7 @@
                     <div class="text-block-2">Socials</div>
                   </div>
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
-                    <a href="https://discord.gg/Jm4nsEGq" class="nav-dropdown-link w-dropdown-link">Discord</a>
+                    <a href="http://discord.gg/resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Discord</a>
                     <a href="https://www.twitch.tv/resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitch</a>
                     <a href="https://twitter.com/ResoniteApp?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitter</a>
                     <a href="https://www.youtube.com/@resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">YouTube</a>
@@ -110,7 +110,7 @@
           <h2 class="heading-3">Collaborative Creation Tools</h2>
           <p class="margin-bottom-24px">Resonite provides users an array of development tools that can be used alongside others in your session! Create custom avatars, interactive props, worlds, experiences, and much more! (While possible, we typically advise against deleting all of existence.)</p>
         </div>
-        <div class="hero-split"><img src="images/Features_CollaborativeCreationTools_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_CollaborativeCreationTools_01-p-500.jpg 500w, images/Features_CollaborativeCreationTools_01-p-800.jpg 800w, images/Features_CollaborativeCreationTools_01-p-1080.jpg 1080w, images/Features_CollaborativeCreationTools_01-p-1600.jpg 1600w, images/Features_CollaborativeCreationTools_01-p-2000.jpg 2000w, images/Features_CollaborativeCreationTools_01.jpg 2560w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/Features_CollaborativeCreationTools_01.jpg" loading="lazy" sizes="100vw" srcset="images/Features_CollaborativeCreationTools_01-p-500.jpg 500w, images/Features_CollaborativeCreationTools_01-p-800.jpg 800w, images/Features_CollaborativeCreationTools_01-p-1080.jpg 1080w, images/Features_CollaborativeCreationTools_01-p-1600.jpg 1600w, images/Features_CollaborativeCreationTools_01-p-2000.jpg 2000w, images/Features_CollaborativeCreationTools_01.jpg 2560w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
@@ -126,7 +126,7 @@
   <section class="hero-heading-right-3-copy-2">
     <div class="container-2">
       <div class="hero-wrapper-2">
-        <div class="hero-split"><img src="images/Protoflux_Logo_Color_1080.png" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/Protoflux_Logo_Color_1080-p-500.png 500w, images/Protoflux_Logo_Color_1080-p-800.png 800w, images/Protoflux_Logo_Color_1080-p-1080.png 1080w, images/Protoflux_Logo_Color_1080.png 1081w" alt="" class="image-3"></div>
+        <div class="hero-split"><img src="images/Protoflux_Logo_Color_1080.png" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/Protoflux_Logo_Color_1080-p-500.png 500w, images/Protoflux_Logo_Color_1080-p-800.png 800w, images/Protoflux_Logo_Color_1080-p-1080.png 1080w, images/Protoflux_Logo_Color_1080.png 1081w" alt="" class="image-3"></div>
         <div class="hero-split">
           <h2 class="heading-4">Visual Scripting</h2>
           <p class="margin-bottom-24px-copy">ProtoFlux is the crown jewel of our creative tools - the most powerful visual programming language that our experienced team has designed to date, which lets you quickly prototype and build anything from simple interactions to complex games and systems - with full real-time collaboration support and immediate feedback. Build anything from avatar and world interactivity, to complex systems, and games.</p>
@@ -148,7 +148,7 @@
   <section class="hero-heading-right-3">
     <div class="container-2">
       <div class="hero-wrapper-2">
-        <div class="hero-split"><img src="images/Features_ContentSharing_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_ContentSharing_01-p-500.jpg 500w, images/Features_ContentSharing_01-p-800.jpg 800w, images/Features_ContentSharing_01-p-1080.jpg 1080w, images/Features_ContentSharing_01-p-1600.jpg 1600w, images/Features_ContentSharing_01.jpg 1920w" alt="" class="shadow-two-3"></div>
+        <div class="hero-split"><img src="images/Features_ContentSharing_01.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_ContentSharing_01-p-500.jpg 500w, images/Features_ContentSharing_01-p-800.jpg 800w, images/Features_ContentSharing_01-p-1080.jpg 1080w, images/Features_ContentSharing_01-p-1600.jpg 1600w, images/Features_ContentSharing_01.jpg 1920w" alt="" class="shadow-two-3"></div>
         <div class="hero-split">
           <h2 class="heading-4">Content Sharing</h2>
           <p class="margin-bottom-24px-copy">Browse your own and others content! Save others (with proper permissions) and your own creations. Upload files directly from your local files into a session, view and modify it with others!</p>
@@ -172,7 +172,7 @@
           <h2 class="heading-5">Interactive Custom Avatars</h2>
           <p class="margin-bottom-24px">Resonite allows you to share, build, and collect interactive custom avatars! (Legs included.)</p>
         </div>
-        <div class="hero-split"><img src="images/2023-11-10-00.56.08.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/2023-11-10-00.56.08-p-500.jpg 500w, images/2023-11-10-00.56.08-p-800.jpg 800w, images/2023-11-10-00.56.08-p-1080.jpg 1080w, images/2023-11-10-00.56.08-p-1600.jpg 1600w, images/2023-11-10-00.56.08-p-2000.jpg 2000w, images/2023-11-10-00.56.08-p-2600.jpg 2600w, images/2023-11-10-00.56.08-p-3200.jpg 3200w, images/2023-11-10-00.56.08.jpg 3840w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/2023-11-10-00.56.08.jpg" loading="lazy" sizes="100vw" srcset="images/2023-11-10-00.56.08-p-500.jpg 500w, images/2023-11-10-00.56.08-p-800.jpg 800w, images/2023-11-10-00.56.08-p-1080.jpg 1080w, images/2023-11-10-00.56.08-p-1600.jpg 1600w, images/2023-11-10-00.56.08-p-2000.jpg 2000w, images/2023-11-10-00.56.08-p-2600.jpg 2600w, images/2023-11-10-00.56.08-p-3200.jpg 3200w, images/2023-11-10-00.56.08.jpg 3840w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
@@ -190,7 +190,7 @@
   <section class="footer-dark-3">
     <div class="container-9">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 84vw, 158.99305725097656px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 84vw, 159px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
           <div id="w-node-c8916215-f428-4614-ff29-bbb3582a90f2-c40d89ac" class="footer-block-2">
             <div class="title-small-2">Company</div>
