fix(eula): fix email on EULA

--- a/policies/EULA.html
+++ b/policies/EULA.html
@@ -298,7 +298,7 @@
     <div class="MsoNormal">Zábřeh, 700 30</div>
     <div class="MsoNormal">Czechia</div>
   </div>
-  <div class="MsoNormal"><SCRIPT LANGUAGE="JavaScript">user = 'contact';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT></div>
+  <div class="MsoNormal"><SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT></div>
 </div>
 <div><br /></div>
 <div><br /></div>
