--- a/policies/EULA.html
+++ b/policies/EULA.html
@@ -160,7 +160,7 @@
       <div class="MsoNormal">5. Your Contributions are not unsolicited or unauthorized advertising, promotional materials, pyramid schemes, chain letters, spam, mass mailings, or other forms of solicitation.</div>
       <div class="MsoNormal">6. Your Contributions do not ridicule, mock, disparage, intimidate, or abuse anyone.</div>
       <div class="MsoNormal">7. Your Contributions are not used to harass or threaten (in the legal sense of those terms) any other person and to promote violence against a specific person or class of people.</div>
-      <div class="MsoNormal">8. Your Contributions do not violate any applicable law, regulation, or rule.</div>
+      <div class="MsoNormal">8. Your Contributions do not violate any applicable law, regulation, or rule, including any relevant local, national, or international law.</div>
       <div class="MsoNormal">9. Your Contributions do not violate the privacy or publicity rights of any third party.</div>
       <div class="MsoNormal">10. Your Contributions do not violate any applicable law concerning child pornography, or otherwise intended to protect the health or well-being of minors.</div>
       <div class="MsoNormal">11. Your Contributions do not include any offensive comments that are connected to race, national origin, gender, sexual preference, or physical handicap.</div>
