--- a/policies/Changelog.html
+++ b/policies/Changelog.html
@@ -14,14 +14,23 @@
         </header>
         <h1>Policy Changelog</h1>
         <p>For transparency, a list of changes to our polices are presented here.</p>
+        <section>
+            <h2>18th October 2023 - Terms of Service</h2>
+            <p>We've updated the language in our Terms of Service in section 2 Intellectual Property rights. We've removed some language relating to the license grants on contents:</p>
+            <ul>
+                <li>We've removed the "Sell" and "Resell" license grant. Resonite does not currently sell or resell your contributions. Future features on our roadmap may require re-adding this but we'll work with you to communicate and overhaul our policies at this time.</li>
+                <li>We've removed wording that referred to "exploit"-ing your contributions. This language that caused some rightful alarm and is not necessary as the other grants cover our use-cases.</li>
+                <li>We've removed clauses relating to users being able to access Resonite if they are under 16 with parental supervision. We have no way to store or verify this information at this time so cannot support it.</li>
+            </ul>
+        </section>
 
-        <h2>18th October 2023 - Terms of Service</h2>
-        <p>We've updated the language in our Terms of Service in section 2 Intellectual Property rights. We've removed some language relating to the license grants on contents:</p>
-        <ul>
-            <li>We've removed the "Sell" and "Resell" license grant. Resonite does not currently sell or resell your contributions. Future features on our roadmap may require re-adding this but we'll work with you to communicate and overhaul our policies at this time.</li>
-            <li>We've removed wording that referred to "exploit"-ing your contributions. This language that caused some rightful alarm and is not necessary as the other grants cover our use-cases.</li>
-            <li>We've removed clauses relating to users being able to access Resonite if they are under 16 with parental supervision. We have no way to store or verify this information at this time so cannot support it.</li>
-        </ul>
+        <section>
+            <h2>5th January 2023 - EULA</h2>
+            <p>We've updated the language in our EULA, section 6.8</p>
+            <ul>
+                <li>We've added "including any relevant local, national, or international law." to the end of this line. This asks users to ensure they are taking in account the law in many areas before submitting content.</li>
+            </ul>
+        </section>
 
         <p>If you have questions about these policies, please contact at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>.</p>
 
